clusters/cluster1/monitoring/scrape-aws-udp-relay-2.yaml
# Note: Update the tailscale.com/tailnet-ip annotation to match your cluster1 UDP relay IP
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  annotations:
    # TODO: Update this IP to your cluster1 UDP relay IP
    tailscale.com/tailnet-ip: 100.111.122.14
  name: udp-relay-2
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
  ports:
    - port: 8080
      protocol: TCP
      name: web
